refactor(chat): introduce provider-neutral LLM abstraction layer
Add ChatLlmClient interface with LlmRequest/LlmResponse/LlmMessage/LlmTool/LlmToolCall
types decoupling the entire chat service and tool layer from Anthropic SDK types.
Add OpenAiChatLlmClient (GPT-4.1) alongside AnthropicChatLlmClient; switching
providers now requires changing a single line in ChatService and PublicChatIntentRouter.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>