@@ -1,13 +1,12 @@
 package com.semantyca.jesoos.service.chat.tools.auth;
 
-import com.anthropic.core.JsonValue;
-import com.anthropic.models.messages.MessageCreateParams;
-import com.anthropic.models.messages.MessageParam;
-import com.anthropic.models.messages.ToolUseBlock;
 import com.semantyca.core.service.UserService;
 import com.semantyca.jesoos.messaging.MetricPublisher;
 import com.semantyca.jesoos.service.chat.PublicChatService;
 import com.semantyca.jesoos.service.chat.PublicChatSessionManager;
+import com.semantyca.jesoos.service.chat.llm.LlmMessage;
+import com.semantyca.jesoos.service.chat.llm.LlmRequest;
+import com.semantyca.jesoos.service.chat.llm.LlmToolCall;
 import com.semantyca.jesoos.service.chat.tools.BaseToolHandler;
 import com.semantyca.jesoos.ws.PublicChatController;
 import com.semantyca.mixpla.dto.queue.metric.MetricEventType;
@@ -26,8 +25,8 @@ public class VerifyCodeToolHandler extends BaseToolHandler {
     private static final Logger LOG = Logger.getLogger(VerifyCodeToolHandler.class);
 
     public static Uni<Void> handle(
-            ToolUseBlock toolUse,
-            Map<String, JsonValue> inputMap,
+            LlmToolCall toolCall,
+            Map<String, Object> inputMap,
             PublicChatSessionManager sessionManager,
             UserService userService,
             PublicChatController controller,
@@ -37,21 +36,17 @@ public class VerifyCodeToolHandler extends BaseToolHandler {
             Consumer<String> chunkHandler,
             Consumer<String> completionHandler,
             String connectionId,
-            List<MessageParam> conversationHistory,
+            List<LlmMessage> conversationHistory,
             String systemPromptCall2,
-            Function<MessageCreateParams, Uni<Void>> streamFn
+            Function<LlmRequest, Uni<Void>> streamFn
     ) {
         VerifyCodeToolHandler handler = new VerifyCodeToolHandler();
-        String email = inputMap.getOrDefault("email", JsonValue.from(""))
-                .toString().replace("\"", "").trim();
-        String code = inputMap.getOrDefault("code", JsonValue.from(""))
-                .toString().replace("\"", "").trim();
-        String preferredName = inputMap.getOrDefault("preferred_name", JsonValue.from(""))
-                .toString().replace("\"", "").trim();
+        String email = ((String) inputMap.getOrDefault("email", "")).trim();
+        String code = ((String) inputMap.getOrDefault("code", "")).trim();
+        String preferredName = ((String) inputMap.getOrDefault("preferred_name", "")).trim();
 
         if (email.isBlank() || code.isBlank()) {
-            return handleError(toolUse, "Email and verification code are both required", handler,
-                    chunkHandler, connectionId, conversationHistory, systemPromptCall2, streamFn);
+            return handleError(toolCall, "Email and verification code are both required", handler, chunkHandler, connectionId, conversationHistory, systemPromptCall2, streamFn);
         }
 
         LOG.infof("[VerifyCode] Verifying code for email: %s", email);
@@ -62,26 +57,22 @@ public class VerifyCodeToolHandler extends BaseToolHandler {
             LOG.warnf("[VerifyCode] Invalid or expired code for %s", email);
             metricPublisher.publishMetric(brandSlug, MetricEventType.IMPORTANT_INFORMATION, ProcessType.INDEPENDENT,
                     "login_failed", Map.of("email", email, "reason", "invalid_or_expired_code", "connectionId", connectionId));
-            return handleError(toolUse, "Invalid or expired verification code. Please request a new one.",
+            return handleError(toolCall, "Invalid or expired verification code. Please request a new one.",
                     handler, chunkHandler, connectionId, conversationHistory, systemPromptCall2, streamFn);
         }
-
-        LOG.infof("[VerifyCode] Code verified for %s, upgrading user session", email);
 
         return userService.findByEmail(email)
                 .onItem().transformToUni(user -> {
                     if (user == null || user.getId() == 0) {
-                        LOG.warnf("[VerifyCode] User not found for email %s", email);
                         metricPublisher.publishMetric(brandSlug, MetricEventType.IMPORTANT_INFORMATION, ProcessType.INDEPENDENT,
                                 "login_failed", Map.of("email", email, "reason", "user_not_found", "connectionId", connectionId));
-                        return handleError(toolUse, "User account not found. Please contact support.",
+                        return handleError(toolCall, "User account not found. Please contact support.",
                                 handler, chunkHandler, connectionId, conversationHistory, systemPromptCall2, streamFn);
                     }
 
                     controller.upgradeUserSession(connectionId, user);
-                    LOG.infof("[VerifyCode] User session upgraded in-place for %s (userId=%s)", email, user.getId());
 
-                    Function<MessageCreateParams, Uni<Void>> authStreamFn =
+                    Function<LlmRequest, Uni<Void>> authStreamFn =
                             chatService.createAuthStreamFn(chunkHandler, completionHandler, connectionId, brandSlug, user.getId());
 
                     return chatService.registerListener(email, brandSlug, preferredName)
@@ -92,14 +83,9 @@ public class VerifyCodeToolHandler extends BaseToolHandler {
                             .onItem().transformToUni(registrationResult -> {
                                 boolean registered = registrationResult != null;
                                 if (registered) {
-                                    LOG.infof("[VerifyCode] User registered as listener for station %s (userId=%s)", brandSlug, user.getId());
                                     metricPublisher.publishMetric(brandSlug, MetricEventType.IMPORTANT_INFORMATION, ProcessType.INDEPENDENT,
-                                            "login_success", Map.of(
-                                                    "email", email,
-                                                    "userId", user.getId(),
-                                                    "connectionId", connectionId,
-                                                    "historySize", conversationHistory.size()
-                                            ));
+                                            "login_success", Map.of("email", email, "userId", user.getId(),
+                                                    "connectionId", connectionId, "historySize", conversationHistory.size()));
                                     controller.sendToConnection(connectionId, new JsonObject()
                                             .put("type", "session_token")
                                             .put("token", registrationResult.userToken())
@@ -112,42 +98,27 @@ public class VerifyCodeToolHandler extends BaseToolHandler {
                                         : "Authentication successful! You now have access to all features.";
 
                                 JsonObject payload = new JsonObject()
-                                        .put("ok", true)
-                                        .put("email", email)
-                                        .put("userId", user.getId())
-                                        .put("message", message);
+                                        .put("ok", true).put("email", email).put("userId", user.getId()).put("message", message);
 
-                                handler.addToolUseToHistory(toolUse, conversationHistory);
-                                handler.addToolResultToHistory(toolUse, payload.encode(), conversationHistory);
+                                handler.addToolUseToHistory(toolCall, conversationHistory);
+                                handler.addToolResultToHistory(toolCall, payload.encode(), conversationHistory);
                                 LOG.infof("[VerifyCode] syncing history for userId=%d size=%d lastRole=%s",
                                         user.getId(), conversationHistory.size(),
-                                        conversationHistory.isEmpty() ? "n/a" : conversationHistory.get(conversationHistory.size() - 1).role().toString());
+                                        conversationHistory.isEmpty() ? "n/a" : conversationHistory.getLast().role().name());
                                 chatService.syncConversationHistory(connectionId, user.getId(), conversationHistory);
 
-                                MessageCreateParams params = handler.buildFollowUpParams(systemPromptCall2, conversationHistory);
-                                return authStreamFn.apply(params);
+                                return authStreamFn.apply(handler.buildFollowUpParams(systemPromptCall2, conversationHistory));
                             });
                 });
     }
 
-    static Uni<Void> handleError(
-            ToolUseBlock toolUse,
-            String errorMessage,
-            VerifyCodeToolHandler handler,
-            Consumer<String> chunkHandler,
-            String connectionId,
-            List<MessageParam> conversationHistory,
-            String systemPromptCall2,
-            Function<MessageCreateParams, Uni<Void>> streamFn
-    ) {
-        JsonObject errorPayload = new JsonObject()
-                .put("ok", false)
-                .put("error", errorMessage);
-
-        handler.addToolUseToHistory(toolUse, conversationHistory);
-        handler.addToolResultToHistory(toolUse, errorPayload.encode(), conversationHistory);
-
-        MessageCreateParams params = handler.buildFollowUpParams(systemPromptCall2, conversationHistory);
-        return streamFn.apply(params);
+    static Uni<Void> handleError(LlmToolCall toolCall, String errorMessage, VerifyCodeToolHandler handler,
+                                 Consumer<String> chunkHandler, String connectionId,
+                                 List<LlmMessage> conversationHistory, String systemPromptCall2,
+                                 Function<LlmRequest, Uni<Void>> streamFn) {
+        JsonObject errorPayload = new JsonObject().put("ok", false).put("error", errorMessage);
+        handler.addToolUseToHistory(toolCall, conversationHistory);
+        handler.addToolResultToHistory(toolCall, errorPayload.encode(), conversationHistory);
+        return streamFn.apply(handler.buildFollowUpParams(systemPromptCall2, conversationHistory));
     }
 }
